<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/game_window">

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="200dip"
        android:layout_height="300dip"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cream"
                />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/blue">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/edit_comment"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="true"
                            android:background="@color/white"
                            android:hint="コメントを入力"
                            android:textSize="38sp"
                            android:layout_toStartOf="@+id/btn_comment" />

                        <Button
                            android:text="送信"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:id="@+id/btn_comment"
                            android:textSize="29sp" />

                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentStart="true"
                            android:layout_above="@+id/btn_comment"
                            android:id="@+id/chat_list"
                            android:divider="@color/white"
                            android:dividerHeight="0px"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/list_players"
                        android:divider="@color/black"
                        android:dividerHeight="1px"/>

                </LinearLayout>

            </FrameLayout>
            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v4.view.ViewPager>

        </LinearLayout>
    </TabHost>

    <Button
        android:text="@string/wolf_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:textSize="14sp"
        android:minWidth="58dip"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="@string/player_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pname"
        android:layout_toEndOf="@+id/pname"
        android:id="@+id/pjob"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:text="@string/player_name_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pname"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_alignTop="@+id/txt1"
        android:layout_toStartOf="@+id/button"
        android:layout_marginEnd="11dp" />

    <TextView
        android:text="@string/sec_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:textSize="24sp"
        android:textColor="@color/red"
        android:layout_marginEnd="11dp"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_toStartOf="@+id/textView10" />

    <TextView
        android:text="@string/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt1"
        android:textSize="28sp"
        android:textColor="@color/colorPrimary"
        android:layout_alignTop="@+id/pjob"
        android:layout_centerHorizontal="true" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>